--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 #main{
-	 style="width: 150px; height: 150px; background-color: black;"
+	 width: 150px; height: 150px; background-color: black
 }
-p.class{
-	 style="color: white;margin-left: 32px;padding: 10px;"
+p.hello-accio-job{
+	color: white;
+	margin-left: 32px; 
+	padding: 10px;
 }
-/* Your CSS Code here. */
