--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 #main{
-	 width: 150px; height: 150px; background-color: black
+	 width: 150px;
+	height: 150px;
+	background-color: black;
 }
 p.hello-accio-job{
 	color: white;
